# ppx

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
impl/: Cargo.toml  README.md
impl/src/: lib.rs
impl/tests/: integration_test.rs  pragma_once.txt  utils.rs
macro/: Cargo.toml  README.md
macro/src/: lib.rs
macro/tests/: integration_tests.rs
src/: lib.rs  main.rs
tests/: integration_test.rs  test.txt  test_with_param.txt
wgsl/: Cargo.toml  README.md
wgsl/src/: lib.rs
