[package]
name = "ppx"
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "C-style pre-processor library"
repository = "https://github.com/Jomy10/ppx"
keywords = ["macro", "pre-processor", "expansion", "preproc", "compile-time"]
categories = ["template-engine", "development-tools", "development-tools::build-utils"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ppx-impl = { path = "impl", version = "=0.5.0" }
ppx-macros = { path = "macro", version = "1", optional = true }

[features]
macro = ["ppx-macros", "ppx-macros/nightly"]
macro-stable = ["ppx-macros"]
vfs = ["ppx-impl/vfs"]

[workspace]
members = [
  "macro",
  "impl",
  "wgsl"
]
