[package]
name = "ppx-impl"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "C-style pre-processor library implementation. See 'ppx' for the library you should use."
repository = "https://github.com/Jomy10/ppx"
keywords = ["macro", "pre-processor", "expansion", "preproc"]
categories = ["template-engine", "development-tools", "development-tools::build-utils"]

[dependencies]
concat-string = "1.0.1"
eval = "0.4.3"
itertools = "0.14.0"
thiserror = "2.0.17"
vfs = { version = "0.12.2", optional = true }
